// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ChartTooltip 1`] = `
<VictoryTooltip
  active={false}
  flyoutComponent={
    <Flyout
      pathComponent={<Path />}
    />
  }
  groupComponent={<g />}
  labelComponent={
    <VictoryLabel
      capHeight={0.71}
      direction="inherit"
      lineHeight={1}
      textComponent={<Text />}
      tspanComponent={<TSpan />}
    />
  }
  renderInPortal={true}
  text="This is a tooltip"
  theme={
    Object {
      "area": Object {
        "colorScale": Array [
          "#06c",
          "#8bc1f7",
          "#002f5d",
          "#519de9",
          "#004b95",
        ],
        "height": 300,
        "padding": 50,
        "style": Object {
          "data": Object {
            "fill": "#151515",
            "fillOpacity": 0.4,
            "stroke": "transparent",
            "strokeWidth": 2,
          },
          "labels": Object {
            "fontFamily": "var(--pf-chart-global--FontFamily)",
            "fontSize": 14,
            "letterSpacing": "var(--pf-chart-global--letter-spacing)",
            "padding": 10,
            "stroke": "transparent",
            "textAnchor": "middle",
          },
        },
        "width": 450,
      },
      "axis": Object {
        "colorScale": Array [
          "#06c",
          "#8bc1f7",
          "#002f5d",
          "#519de9",
          "#004b95",
        ],
        "height": 300,
        "padding": 50,
        "style": Object {
          "axis": Object {
            "fill": "transparent",
            "stroke": "#d2d2d2",
            "strokeLinecap": "round",
            "strokeLinejoin": "round",
            "strokeWidth": 1,
          },
          "axisLabel": Object {
            "fontFamily": "var(--pf-chart-global--FontFamily)",
            "fontSize": 14,
            "letterSpacing": "var(--pf-chart-global--letter-spacing)",
            "padding": 100,
            "stroke": "transparent",
            "textAnchor": "middle",
          },
          "grid": Object {
            "fill": "none",
            "pointerEvents": "painted",
            "stroke": "none",
            "strokeLinecap": "round",
            "strokeLinejoin": "round",
          },
          "tickLabels": Object {
            "fill": "#4d5258",
            "fontFamily": "var(--pf-chart-global--FontFamily)",
            "fontSize": 14,
            "letterSpacing": "var(--pf-chart-global--letter-spacing)",
            "padding": 10,
            "stroke": "transparent",
          },
          "ticks": Object {
            "fill": "transparent",
            "size": 5,
            "stroke": "none",
            "strokeLinecap": "round",
            "strokeLinejoin": "round",
            "strokeWidth": 1,
          },
        },
        "width": 450,
      },
      "bar": Object {
        "barWidth": 10,
        "colorScale": Array [
          "#06c",
          "#8bc1f7",
          "#002f5d",
          "#519de9",
          "#004b95",
        ],
        "height": 300,
        "padding": 50,
        "style": Object {
          "data": Object {
            "fill": "#06c",
            "padding": 8,
            "stroke": "none",
            "strokeWidth": 0,
          },
          "labels": Object {
            "fontFamily": "var(--pf-chart-global--FontFamily)",
            "fontSize": 14,
            "letterSpacing": "var(--pf-chart-global--letter-spacing)",
            "padding": 10,
            "stroke": "transparent",
          },
        },
        "width": 450,
      },
      "boxplot": Object {
        "boxWidth": 20,
        "colorScale": Array [
          "#06c",
          "#8bc1f7",
          "#002f5d",
          "#519de9",
          "#004b95",
        ],
        "height": 300,
        "padding": 50,
        "style": Object {
          "max": Object {
            "padding": 8,
            "stroke": "#151515",
            "strokeWidth": 1,
          },
          "maxLabels": Object {
            "fontFamily": "var(--pf-chart-global--FontFamily)",
            "fontSize": 14,
            "letterSpacing": "var(--pf-chart-global--letter-spacing)",
            "padding": 10,
            "stroke": "transparent",
          },
          "median": Object {
            "padding": 8,
            "stroke": "#151515",
            "strokeWidth": 1,
          },
          "medianLabels": Object {
            "fontFamily": "var(--pf-chart-global--FontFamily)",
            "fontSize": 14,
            "letterSpacing": "var(--pf-chart-global--letter-spacing)",
            "padding": 10,
            "stroke": "transparent",
          },
          "min": Object {
            "padding": 8,
            "stroke": "#151515",
            "strokeWidth": 1,
          },
          "minLabels": Object {
            "fontFamily": "var(--pf-chart-global--FontFamily)",
            "fontSize": 14,
            "letterSpacing": "var(--pf-chart-global--letter-spacing)",
            "padding": 10,
            "stroke": "transparent",
          },
          "q1": Object {
            "fill": "#8b8d8f",
            "padding": 8,
          },
          "q1Labels": Object {
            "fontFamily": "var(--pf-chart-global--FontFamily)",
            "fontSize": 14,
            "letterSpacing": "var(--pf-chart-global--letter-spacing)",
            "padding": 10,
            "stroke": "transparent",
          },
          "q3": Object {
            "fill": "#8b8d8f",
            "padding": 8,
          },
          "q3Labels": Object {
            "fontFamily": "var(--pf-chart-global--FontFamily)",
            "fontSize": 14,
            "letterSpacing": "var(--pf-chart-global--letter-spacing)",
            "padding": 10,
            "stroke": "transparent",
          },
        },
        "width": 450,
      },
      "candlestick": Object {
        "candleColors": Object {
          "negative": "#151515",
          "positive": "#fff",
        },
        "colorScale": Array [
          "#06c",
          "#8bc1f7",
          "#002f5d",
          "#519de9",
          "#004b95",
        ],
        "height": 300,
        "padding": 50,
        "style": Object {
          "data": Object {
            "stroke": "#151515",
            "strokeWidth": 1,
          },
          "labels": Object {
            "fontFamily": "var(--pf-chart-global--FontFamily)",
            "fontSize": 14,
            "letterSpacing": "var(--pf-chart-global--letter-spacing)",
            "padding": 10,
            "stroke": "transparent",
            "textAnchor": "middle",
          },
        },
        "width": 450,
      },
      "chart": Object {
        "colorScale": Array [
          "#06c",
          "#8bc1f7",
          "#002f5d",
          "#519de9",
          "#004b95",
        ],
        "height": 300,
        "padding": 50,
        "width": 450,
      },
      "errorbar": Object {
        "borderWidth": 8,
        "colorScale": Array [
          "#06c",
          "#8bc1f7",
          "#002f5d",
          "#519de9",
          "#004b95",
        ],
        "height": 300,
        "padding": 50,
        "style": Object {
          "data": Object {
            "fill": "transparent",
            "opacity": 1,
            "stroke": "#151515",
            "strokeWidth": 2,
          },
          "labels": Object {
            "fontFamily": "var(--pf-chart-global--FontFamily)",
            "fontSize": 14,
            "letterSpacing": "var(--pf-chart-global--letter-spacing)",
            "padding": 10,
            "stroke": "transparent",
            "textAnchor": "middle",
          },
        },
        "width": 450,
      },
      "group": Object {
        "colorScale": Array [
          "#06c",
          "#8bc1f7",
          "#002f5d",
          "#519de9",
          "#004b95",
        ],
        "height": 300,
        "padding": 50,
        "width": 450,
      },
      "legend": Object {
        "colorScale": Array [
          "#06c",
          "#8bc1f7",
          "#002f5d",
          "#519de9",
          "#004b95",
        ],
        "gutter": 20,
        "orientation": "horizontal",
        "style": Object {
          "data": Object {
            "type": "square",
          },
          "labels": Object {
            "fontFamily": "var(--pf-chart-global--FontFamily)",
            "fontSize": 14,
            "letterSpacing": "var(--pf-chart-global--letter-spacing)",
            "padding": 10,
            "stroke": "transparent",
          },
          "title": Object {
            "fontFamily": "var(--pf-chart-global--FontFamily)",
            "fontSize": 14,
            "letterSpacing": "var(--pf-chart-global--letter-spacing)",
            "padding": 2,
            "stroke": "transparent",
          },
        },
        "titleOrientation": "top",
      },
      "line": Object {
        "colorScale": Array [
          "#06c",
          "#8bc1f7",
          "#002f5d",
          "#519de9",
          "#004b95",
        ],
        "height": 300,
        "padding": 50,
        "style": Object {
          "data": Object {
            "fill": "transparent",
            "opacity": 1,
            "stroke": "#151515",
            "strokeWidth": 2,
          },
          "labels": Object {
            "fontFamily": "var(--pf-chart-global--FontFamily)",
            "fontSize": 14,
            "letterSpacing": "var(--pf-chart-global--letter-spacing)",
            "padding": 10,
            "stroke": "transparent",
            "textAnchor": "middle",
          },
        },
        "width": 450,
      },
      "pie": Object {
        "colorScale": Array [
          "#06c",
          "#8bc1f7",
          "#002f5d",
          "#519de9",
          "#004b95",
        ],
        "height": 230,
        "padding": 8,
        "style": Object {
          "data": Object {
            "padding": 8,
            "stroke": "transparent",
            "strokeWidth": 1,
          },
          "labels": Object {
            "fontFamily": "var(--pf-chart-global--FontFamily)",
            "fontSize": 14,
            "letterSpacing": "var(--pf-chart-global--letter-spacing)",
            "padding": 8,
            "stroke": "transparent",
          },
        },
        "width": 230,
      },
      "scatter": Object {
        "colorScale": Array [
          "#06c",
          "#8bc1f7",
          "#002f5d",
          "#519de9",
          "#004b95",
        ],
        "height": 300,
        "padding": 50,
        "style": Object {
          "data": Object {
            "fill": "#151515",
            "opacity": 1,
            "stroke": "transparent",
            "strokeWidth": 0,
          },
          "labels": Object {
            "fontFamily": "var(--pf-chart-global--FontFamily)",
            "fontSize": 14,
            "letterSpacing": "var(--pf-chart-global--letter-spacing)",
            "padding": 10,
            "stroke": "transparent",
            "textAnchor": "middle",
          },
        },
        "width": 450,
      },
      "stack": Object {
        "colorScale": Array [
          "#06c",
          "#8bc1f7",
          "#002f5d",
          "#519de9",
          "#004b95",
        ],
        "height": 300,
        "padding": 50,
        "style": Object {
          "data": Object {
            "strokeWidth": 1,
          },
        },
        "width": 450,
      },
      "tooltip": Object {
        "cornerRadius": 0,
        "flyoutStyle": Object {
          "cornerRadius": 0,
          "fill": "#151515",
          "pointerEvents": "none",
          "stroke": "#151515",
          "strokeWidth": 0,
        },
        "pointerLength": 10,
        "pointerWidth": 20,
        "style": Object {
          "fill": "#ededed",
          "padding": 16,
          "pointerEvents": "none",
        },
      },
      "voronoi": Object {
        "colorScale": Array [
          "#06c",
          "#8bc1f7",
          "#002f5d",
          "#519de9",
          "#004b95",
        ],
        "height": 300,
        "padding": 50,
        "style": Object {
          "data": Object {
            "fill": "transparent",
            "stroke": "transparent",
            "strokeWidth": 0,
          },
          "flyout": Object {
            "fill": "#151515",
            "pointerEvents": "none",
            "stroke": "#151515",
            "strokeWidth": 1,
          },
          "labels": Object {
            "fill": "#ededed",
            "fontFamily": "var(--pf-chart-global--FontFamily)",
            "fontSize": 14,
            "letterSpacing": "var(--pf-chart-global--letter-spacing)",
            "padding": 8,
            "pointerEvents": "none",
            "stroke": "transparent",
            "textAnchor": "middle",
          },
        },
        "width": 450,
      },
    }
  }
/>
`;

exports[`ChartTooltip 2`] = `
<VictoryTooltip
  active={false}
  flyoutComponent={
    <Flyout
      pathComponent={<Path />}
    />
  }
  groupComponent={<g />}
  labelComponent={
    <VictoryLabel
      capHeight={0.71}
      direction="inherit"
      lineHeight={1}
      textComponent={<Text />}
      tspanComponent={<TSpan />}
    />
  }
  renderInPortal={true}
  text="This is a tooltip"
  theme={
    Object {
      "area": Object {
        "colorScale": Array [
          "#06c",
          "#8bc1f7",
          "#002f5d",
          "#519de9",
          "#004b95",
        ],
        "height": 300,
        "padding": 50,
        "style": Object {
          "data": Object {
            "fill": "#151515",
            "fillOpacity": 0.4,
            "stroke": "transparent",
            "strokeWidth": 2,
          },
          "labels": Object {
            "fontFamily": "var(--pf-chart-global--FontFamily)",
            "fontSize": 14,
            "letterSpacing": "var(--pf-chart-global--letter-spacing)",
            "padding": 10,
            "stroke": "transparent",
            "textAnchor": "middle",
          },
        },
        "width": 450,
      },
      "axis": Object {
        "colorScale": Array [
          "#06c",
          "#8bc1f7",
          "#002f5d",
          "#519de9",
          "#004b95",
        ],
        "height": 300,
        "padding": 50,
        "style": Object {
          "axis": Object {
            "fill": "transparent",
            "stroke": "#d2d2d2",
            "strokeLinecap": "round",
            "strokeLinejoin": "round",
            "strokeWidth": 1,
          },
          "axisLabel": Object {
            "fontFamily": "var(--pf-chart-global--FontFamily)",
            "fontSize": 14,
            "letterSpacing": "var(--pf-chart-global--letter-spacing)",
            "padding": 100,
            "stroke": "transparent",
            "textAnchor": "middle",
          },
          "grid": Object {
            "fill": "none",
            "pointerEvents": "painted",
            "stroke": "none",
            "strokeLinecap": "round",
            "strokeLinejoin": "round",
          },
          "tickLabels": Object {
            "fill": "#4d5258",
            "fontFamily": "var(--pf-chart-global--FontFamily)",
            "fontSize": 14,
            "letterSpacing": "var(--pf-chart-global--letter-spacing)",
            "padding": 10,
            "stroke": "transparent",
          },
          "ticks": Object {
            "fill": "transparent",
            "size": 5,
            "stroke": "none",
            "strokeLinecap": "round",
            "strokeLinejoin": "round",
            "strokeWidth": 1,
          },
        },
        "width": 450,
      },
      "bar": Object {
        "barWidth": 10,
        "colorScale": Array [
          "#06c",
          "#8bc1f7",
          "#002f5d",
          "#519de9",
          "#004b95",
        ],
        "height": 300,
        "padding": 50,
        "style": Object {
          "data": Object {
            "fill": "#06c",
            "padding": 8,
            "stroke": "none",
            "strokeWidth": 0,
          },
          "labels": Object {
            "fontFamily": "var(--pf-chart-global--FontFamily)",
            "fontSize": 14,
            "letterSpacing": "var(--pf-chart-global--letter-spacing)",
            "padding": 10,
            "stroke": "transparent",
          },
        },
        "width": 450,
      },
      "boxplot": Object {
        "boxWidth": 20,
        "colorScale": Array [
          "#06c",
          "#8bc1f7",
          "#002f5d",
          "#519de9",
          "#004b95",
        ],
        "height": 300,
        "padding": 50,
        "style": Object {
          "max": Object {
            "padding": 8,
            "stroke": "#151515",
            "strokeWidth": 1,
          },
          "maxLabels": Object {
            "fontFamily": "var(--pf-chart-global--FontFamily)",
            "fontSize": 14,
            "letterSpacing": "var(--pf-chart-global--letter-spacing)",
            "padding": 10,
            "stroke": "transparent",
          },
          "median": Object {
            "padding": 8,
            "stroke": "#151515",
            "strokeWidth": 1,
          },
          "medianLabels": Object {
            "fontFamily": "var(--pf-chart-global--FontFamily)",
            "fontSize": 14,
            "letterSpacing": "var(--pf-chart-global--letter-spacing)",
            "padding": 10,
            "stroke": "transparent",
          },
          "min": Object {
            "padding": 8,
            "stroke": "#151515",
            "strokeWidth": 1,
          },
          "minLabels": Object {
            "fontFamily": "var(--pf-chart-global--FontFamily)",
            "fontSize": 14,
            "letterSpacing": "var(--pf-chart-global--letter-spacing)",
            "padding": 10,
            "stroke": "transparent",
          },
          "q1": Object {
            "fill": "#8b8d8f",
            "padding": 8,
          },
          "q1Labels": Object {
            "fontFamily": "var(--pf-chart-global--FontFamily)",
            "fontSize": 14,
            "letterSpacing": "var(--pf-chart-global--letter-spacing)",
            "padding": 10,
            "stroke": "transparent",
          },
          "q3": Object {
            "fill": "#8b8d8f",
            "padding": 8,
          },
          "q3Labels": Object {
            "fontFamily": "var(--pf-chart-global--FontFamily)",
            "fontSize": 14,
            "letterSpacing": "var(--pf-chart-global--letter-spacing)",
            "padding": 10,
            "stroke": "transparent",
          },
        },
        "width": 450,
      },
      "candlestick": Object {
        "candleColors": Object {
          "negative": "#151515",
          "positive": "#fff",
        },
        "colorScale": Array [
          "#06c",
          "#8bc1f7",
          "#002f5d",
          "#519de9",
          "#004b95",
        ],
        "height": 300,
        "padding": 50,
        "style": Object {
          "data": Object {
            "stroke": "#151515",
            "strokeWidth": 1,
          },
          "labels": Object {
            "fontFamily": "var(--pf-chart-global--FontFamily)",
            "fontSize": 14,
            "letterSpacing": "var(--pf-chart-global--letter-spacing)",
            "padding": 10,
            "stroke": "transparent",
            "textAnchor": "middle",
          },
        },
        "width": 450,
      },
      "chart": Object {
        "colorScale": Array [
          "#06c",
          "#8bc1f7",
          "#002f5d",
          "#519de9",
          "#004b95",
        ],
        "height": 300,
        "padding": 50,
        "width": 450,
      },
      "errorbar": Object {
        "borderWidth": 8,
        "colorScale": Array [
          "#06c",
          "#8bc1f7",
          "#002f5d",
          "#519de9",
          "#004b95",
        ],
        "height": 300,
        "padding": 50,
        "style": Object {
          "data": Object {
            "fill": "transparent",
            "opacity": 1,
            "stroke": "#151515",
            "strokeWidth": 2,
          },
          "labels": Object {
            "fontFamily": "var(--pf-chart-global--FontFamily)",
            "fontSize": 14,
            "letterSpacing": "var(--pf-chart-global--letter-spacing)",
            "padding": 10,
            "stroke": "transparent",
            "textAnchor": "middle",
          },
        },
        "width": 450,
      },
      "group": Object {
        "colorScale": Array [
          "#06c",
          "#8bc1f7",
          "#002f5d",
          "#519de9",
          "#004b95",
        ],
        "height": 300,
        "padding": 50,
        "width": 450,
      },
      "legend": Object {
        "colorScale": Array [
          "#06c",
          "#8bc1f7",
          "#002f5d",
          "#519de9",
          "#004b95",
        ],
        "gutter": 20,
        "orientation": "horizontal",
        "style": Object {
          "data": Object {
            "type": "square",
          },
          "labels": Object {
            "fontFamily": "var(--pf-chart-global--FontFamily)",
            "fontSize": 14,
            "letterSpacing": "var(--pf-chart-global--letter-spacing)",
            "padding": 10,
            "stroke": "transparent",
          },
          "title": Object {
            "fontFamily": "var(--pf-chart-global--FontFamily)",
            "fontSize": 14,
            "letterSpacing": "var(--pf-chart-global--letter-spacing)",
            "padding": 2,
            "stroke": "transparent",
          },
        },
        "titleOrientation": "top",
      },
      "line": Object {
        "colorScale": Array [
          "#06c",
          "#8bc1f7",
          "#002f5d",
          "#519de9",
          "#004b95",
        ],
        "height": 300,
        "padding": 50,
        "style": Object {
          "data": Object {
            "fill": "transparent",
            "opacity": 1,
            "stroke": "#151515",
            "strokeWidth": 2,
          },
          "labels": Object {
            "fontFamily": "var(--pf-chart-global--FontFamily)",
            "fontSize": 14,
            "letterSpacing": "var(--pf-chart-global--letter-spacing)",
            "padding": 10,
            "stroke": "transparent",
            "textAnchor": "middle",
          },
        },
        "width": 450,
      },
      "pie": Object {
        "colorScale": Array [
          "#06c",
          "#8bc1f7",
          "#002f5d",
          "#519de9",
          "#004b95",
        ],
        "height": 230,
        "padding": 8,
        "style": Object {
          "data": Object {
            "padding": 8,
            "stroke": "transparent",
            "strokeWidth": 1,
          },
          "labels": Object {
            "fontFamily": "var(--pf-chart-global--FontFamily)",
            "fontSize": 14,
            "letterSpacing": "var(--pf-chart-global--letter-spacing)",
            "padding": 8,
            "stroke": "transparent",
          },
        },
        "width": 230,
      },
      "scatter": Object {
        "colorScale": Array [
          "#06c",
          "#8bc1f7",
          "#002f5d",
          "#519de9",
          "#004b95",
        ],
        "height": 300,
        "padding": 50,
        "style": Object {
          "data": Object {
            "fill": "#151515",
            "opacity": 1,
            "stroke": "transparent",
            "strokeWidth": 0,
          },
          "labels": Object {
            "fontFamily": "var(--pf-chart-global--FontFamily)",
            "fontSize": 14,
            "letterSpacing": "var(--pf-chart-global--letter-spacing)",
            "padding": 10,
            "stroke": "transparent",
            "textAnchor": "middle",
          },
        },
        "width": 450,
      },
      "stack": Object {
        "colorScale": Array [
          "#06c",
          "#8bc1f7",
          "#002f5d",
          "#519de9",
          "#004b95",
        ],
        "height": 300,
        "padding": 50,
        "style": Object {
          "data": Object {
            "strokeWidth": 1,
          },
        },
        "width": 450,
      },
      "tooltip": Object {
        "cornerRadius": 0,
        "flyoutStyle": Object {
          "cornerRadius": 0,
          "fill": "#151515",
          "pointerEvents": "none",
          "stroke": "#151515",
          "strokeWidth": 0,
        },
        "pointerLength": 10,
        "pointerWidth": 20,
        "style": Object {
          "fill": "#ededed",
          "padding": 16,
          "pointerEvents": "none",
        },
      },
      "voronoi": Object {
        "colorScale": Array [
          "#06c",
          "#8bc1f7",
          "#002f5d",
          "#519de9",
          "#004b95",
        ],
        "height": 300,
        "padding": 50,
        "style": Object {
          "data": Object {
            "fill": "transparent",
            "stroke": "transparent",
            "strokeWidth": 0,
          },
          "flyout": Object {
            "fill": "#151515",
            "pointerEvents": "none",
            "stroke": "#151515",
            "strokeWidth": 1,
          },
          "labels": Object {
            "fill": "#ededed",
            "fontFamily": "var(--pf-chart-global--FontFamily)",
            "fontSize": 14,
            "letterSpacing": "var(--pf-chart-global--letter-spacing)",
            "padding": 8,
            "pointerEvents": "none",
            "stroke": "transparent",
            "textAnchor": "middle",
          },
        },
        "width": 450,
      },
    }
  }
/>
`;

exports[`allows tooltip via container component 1`] = `
<VictoryGroup
  containerComponent={
    <Unknown
      activateData={true}
      activateLabels={true}
      className="VictoryContainer"
      labelComponent={
        <VictoryTooltip
          active={false}
          flyoutComponent={
            <Flyout
              pathComponent={<Path />}
            />
          }
          groupComponent={<g />}
          labelComponent={
            <VictoryLabel
              capHeight={0.71}
              direction="inherit"
              lineHeight={1}
              textComponent={<Text />}
              tspanComponent={<TSpan />}
            />
          }
          renderInPortal={true}
        />
      }
      labels={[Function]}
      portalComponent={<Portal />}
      portalZIndex={99}
      responsive={true}
      theme={
        Object {
          "area": Object {
            "colorScale": Array [
              "#06c",
              "#8bc1f7",
              "#002f5d",
              "#519de9",
              "#004b95",
            ],
            "height": 300,
            "padding": 50,
            "style": Object {
              "data": Object {
                "fill": "#151515",
                "fillOpacity": 0.4,
                "stroke": "transparent",
                "strokeWidth": 2,
              },
              "labels": Object {
                "fontFamily": "var(--pf-chart-global--FontFamily)",
                "fontSize": 14,
                "letterSpacing": "var(--pf-chart-global--letter-spacing)",
                "padding": 10,
                "stroke": "transparent",
                "textAnchor": "middle",
              },
            },
            "width": 450,
          },
          "axis": Object {
            "colorScale": Array [
              "#06c",
              "#8bc1f7",
              "#002f5d",
              "#519de9",
              "#004b95",
            ],
            "height": 300,
            "padding": 50,
            "style": Object {
              "axis": Object {
                "fill": "transparent",
                "stroke": "#d2d2d2",
                "strokeLinecap": "round",
                "strokeLinejoin": "round",
                "strokeWidth": 1,
              },
              "axisLabel": Object {
                "fontFamily": "var(--pf-chart-global--FontFamily)",
                "fontSize": 14,
                "letterSpacing": "var(--pf-chart-global--letter-spacing)",
                "padding": 100,
                "stroke": "transparent",
                "textAnchor": "middle",
              },
              "grid": Object {
                "fill": "none",
                "pointerEvents": "painted",
                "stroke": "none",
                "strokeLinecap": "round",
                "strokeLinejoin": "round",
              },
              "tickLabels": Object {
                "fill": "#4d5258",
                "fontFamily": "var(--pf-chart-global--FontFamily)",
                "fontSize": 14,
                "letterSpacing": "var(--pf-chart-global--letter-spacing)",
                "padding": 10,
                "stroke": "transparent",
              },
              "ticks": Object {
                "fill": "transparent",
                "size": 5,
                "stroke": "none",
                "strokeLinecap": "round",
                "strokeLinejoin": "round",
                "strokeWidth": 1,
              },
            },
            "width": 450,
          },
          "bar": Object {
            "barWidth": 10,
            "colorScale": Array [
              "#06c",
              "#8bc1f7",
              "#002f5d",
              "#519de9",
              "#004b95",
            ],
            "height": 300,
            "padding": 50,
            "style": Object {
              "data": Object {
                "fill": "#06c",
                "padding": 8,
                "stroke": "none",
                "strokeWidth": 0,
              },
              "labels": Object {
                "fontFamily": "var(--pf-chart-global--FontFamily)",
                "fontSize": 14,
                "letterSpacing": "var(--pf-chart-global--letter-spacing)",
                "padding": 10,
                "stroke": "transparent",
              },
            },
            "width": 450,
          },
          "boxplot": Object {
            "boxWidth": 20,
            "colorScale": Array [
              "#06c",
              "#8bc1f7",
              "#002f5d",
              "#519de9",
              "#004b95",
            ],
            "height": 300,
            "padding": 50,
            "style": Object {
              "max": Object {
                "padding": 8,
                "stroke": "#151515",
                "strokeWidth": 1,
              },
              "maxLabels": Object {
                "fontFamily": "var(--pf-chart-global--FontFamily)",
                "fontSize": 14,
                "letterSpacing": "var(--pf-chart-global--letter-spacing)",
                "padding": 10,
                "stroke": "transparent",
              },
              "median": Object {
                "padding": 8,
                "stroke": "#151515",
                "strokeWidth": 1,
              },
              "medianLabels": Object {
                "fontFamily": "var(--pf-chart-global--FontFamily)",
                "fontSize": 14,
                "letterSpacing": "var(--pf-chart-global--letter-spacing)",
                "padding": 10,
                "stroke": "transparent",
              },
              "min": Object {
                "padding": 8,
                "stroke": "#151515",
                "strokeWidth": 1,
              },
              "minLabels": Object {
                "fontFamily": "var(--pf-chart-global--FontFamily)",
                "fontSize": 14,
                "letterSpacing": "var(--pf-chart-global--letter-spacing)",
                "padding": 10,
                "stroke": "transparent",
              },
              "q1": Object {
                "fill": "#8b8d8f",
                "padding": 8,
              },
              "q1Labels": Object {
                "fontFamily": "var(--pf-chart-global--FontFamily)",
                "fontSize": 14,
                "letterSpacing": "var(--pf-chart-global--letter-spacing)",
                "padding": 10,
                "stroke": "transparent",
              },
              "q3": Object {
                "fill": "#8b8d8f",
                "padding": 8,
              },
              "q3Labels": Object {
                "fontFamily": "var(--pf-chart-global--FontFamily)",
                "fontSize": 14,
                "letterSpacing": "var(--pf-chart-global--letter-spacing)",
                "padding": 10,
                "stroke": "transparent",
              },
            },
            "width": 450,
          },
          "candlestick": Object {
            "candleColors": Object {
              "negative": "#151515",
              "positive": "#fff",
            },
            "colorScale": Array [
              "#06c",
              "#8bc1f7",
              "#002f5d",
              "#519de9",
              "#004b95",
            ],
            "height": 300,
            "padding": 50,
            "style": Object {
              "data": Object {
                "stroke": "#151515",
                "strokeWidth": 1,
              },
              "labels": Object {
                "fontFamily": "var(--pf-chart-global--FontFamily)",
                "fontSize": 14,
                "letterSpacing": "var(--pf-chart-global--letter-spacing)",
                "padding": 10,
                "stroke": "transparent",
                "textAnchor": "middle",
              },
            },
            "width": 450,
          },
          "chart": Object {
            "colorScale": Array [
              "#06c",
              "#8bc1f7",
              "#002f5d",
              "#519de9",
              "#004b95",
            ],
            "height": 300,
            "padding": 50,
            "width": 450,
          },
          "errorbar": Object {
            "borderWidth": 8,
            "colorScale": Array [
              "#06c",
              "#8bc1f7",
              "#002f5d",
              "#519de9",
              "#004b95",
            ],
            "height": 300,
            "padding": 50,
            "style": Object {
              "data": Object {
                "fill": "transparent",
                "opacity": 1,
                "stroke": "#151515",
                "strokeWidth": 2,
              },
              "labels": Object {
                "fontFamily": "var(--pf-chart-global--FontFamily)",
                "fontSize": 14,
                "letterSpacing": "var(--pf-chart-global--letter-spacing)",
                "padding": 10,
                "stroke": "transparent",
                "textAnchor": "middle",
              },
            },
            "width": 450,
          },
          "group": Object {
            "colorScale": Array [
              "#06c",
              "#8bc1f7",
              "#002f5d",
              "#519de9",
              "#004b95",
            ],
            "height": 300,
            "padding": 50,
            "width": 450,
          },
          "legend": Object {
            "colorScale": Array [
              "#06c",
              "#8bc1f7",
              "#002f5d",
              "#519de9",
              "#004b95",
            ],
            "gutter": 20,
            "orientation": "horizontal",
            "style": Object {
              "data": Object {
                "type": "square",
              },
              "labels": Object {
                "fontFamily": "var(--pf-chart-global--FontFamily)",
                "fontSize": 14,
                "letterSpacing": "var(--pf-chart-global--letter-spacing)",
                "padding": 10,
                "stroke": "transparent",
              },
              "title": Object {
                "fontFamily": "var(--pf-chart-global--FontFamily)",
                "fontSize": 14,
                "letterSpacing": "var(--pf-chart-global--letter-spacing)",
                "padding": 2,
                "stroke": "transparent",
              },
            },
            "titleOrientation": "top",
          },
          "line": Object {
            "colorScale": Array [
              "#06c",
              "#8bc1f7",
              "#002f5d",
              "#519de9",
              "#004b95",
            ],
            "height": 300,
            "padding": 50,
            "style": Object {
              "data": Object {
                "fill": "transparent",
                "opacity": 1,
                "stroke": "#151515",
                "strokeWidth": 2,
              },
              "labels": Object {
                "fontFamily": "var(--pf-chart-global--FontFamily)",
                "fontSize": 14,
                "letterSpacing": "var(--pf-chart-global--letter-spacing)",
                "padding": 10,
                "stroke": "transparent",
                "textAnchor": "middle",
              },
            },
            "width": 450,
          },
          "pie": Object {
            "colorScale": Array [
              "#06c",
              "#8bc1f7",
              "#002f5d",
              "#519de9",
              "#004b95",
            ],
            "height": 230,
            "padding": 8,
            "style": Object {
              "data": Object {
                "padding": 8,
                "stroke": "transparent",
                "strokeWidth": 1,
              },
              "labels": Object {
                "fontFamily": "var(--pf-chart-global--FontFamily)",
                "fontSize": 14,
                "letterSpacing": "var(--pf-chart-global--letter-spacing)",
                "padding": 8,
                "stroke": "transparent",
              },
            },
            "width": 230,
          },
          "scatter": Object {
            "colorScale": Array [
              "#06c",
              "#8bc1f7",
              "#002f5d",
              "#519de9",
              "#004b95",
            ],
            "height": 300,
            "padding": 50,
            "style": Object {
              "data": Object {
                "fill": "#151515",
                "opacity": 1,
                "stroke": "transparent",
                "strokeWidth": 0,
              },
              "labels": Object {
                "fontFamily": "var(--pf-chart-global--FontFamily)",
                "fontSize": 14,
                "letterSpacing": "var(--pf-chart-global--letter-spacing)",
                "padding": 10,
                "stroke": "transparent",
                "textAnchor": "middle",
              },
            },
            "width": 450,
          },
          "stack": Object {
            "colorScale": Array [
              "#06c",
              "#8bc1f7",
              "#002f5d",
              "#519de9",
              "#004b95",
            ],
            "height": 300,
            "padding": 50,
            "style": Object {
              "data": Object {
                "strokeWidth": 1,
              },
            },
            "width": 450,
          },
          "tooltip": Object {
            "cornerRadius": 0,
            "flyoutStyle": Object {
              "cornerRadius": 0,
              "fill": "#151515",
              "pointerEvents": "none",
              "stroke": "#151515",
              "strokeWidth": 0,
            },
            "pointerLength": 10,
            "pointerWidth": 20,
            "style": Object {
              "fill": "#ededed",
              "padding": 16,
              "pointerEvents": "none",
            },
          },
          "voronoi": Object {
            "colorScale": Array [
              "#06c",
              "#8bc1f7",
              "#002f5d",
              "#519de9",
              "#004b95",
            ],
            "height": 300,
            "padding": 50,
            "style": Object {
              "data": Object {
                "fill": "transparent",
                "stroke": "transparent",
                "strokeWidth": 0,
              },
              "flyout": Object {
                "fill": "#151515",
                "pointerEvents": "none",
                "stroke": "#151515",
                "strokeWidth": 1,
              },
              "labels": Object {
                "fill": "#ededed",
                "fontFamily": "var(--pf-chart-global--FontFamily)",
                "fontSize": 14,
                "letterSpacing": "var(--pf-chart-global--letter-spacing)",
                "padding": 8,
                "pointerEvents": "none",
                "stroke": "transparent",
                "textAnchor": "middle",
              },
            },
            "width": 450,
          },
        }
      }
      voronoiPadding={5}
    />
  }
  groupComponent={<g />}
  height={200}
  samples={50}
  sortOrder="ascending"
  standalone={true}
  theme={
    Object {
      "area": Object {
        "colorScale": Array [
          "#06c",
          "#8bc1f7",
          "#002f5d",
          "#519de9",
          "#004b95",
        ],
        "height": 300,
        "padding": 50,
        "style": Object {
          "data": Object {
            "fill": "#151515",
            "fillOpacity": 0.4,
            "stroke": "transparent",
            "strokeWidth": 2,
          },
          "labels": Object {
            "fontFamily": "var(--pf-chart-global--FontFamily)",
            "fontSize": 14,
            "letterSpacing": "var(--pf-chart-global--letter-spacing)",
            "padding": 10,
            "stroke": "transparent",
            "textAnchor": "middle",
          },
        },
        "width": 450,
      },
      "axis": Object {
        "colorScale": Array [
          "#06c",
          "#8bc1f7",
          "#002f5d",
          "#519de9",
          "#004b95",
        ],
        "height": 300,
        "padding": 50,
        "style": Object {
          "axis": Object {
            "fill": "transparent",
            "stroke": "#d2d2d2",
            "strokeLinecap": "round",
            "strokeLinejoin": "round",
            "strokeWidth": 1,
          },
          "axisLabel": Object {
            "fontFamily": "var(--pf-chart-global--FontFamily)",
            "fontSize": 14,
            "letterSpacing": "var(--pf-chart-global--letter-spacing)",
            "padding": 100,
            "stroke": "transparent",
            "textAnchor": "middle",
          },
          "grid": Object {
            "fill": "none",
            "pointerEvents": "painted",
            "stroke": "none",
            "strokeLinecap": "round",
            "strokeLinejoin": "round",
          },
          "tickLabels": Object {
            "fill": "#4d5258",
            "fontFamily": "var(--pf-chart-global--FontFamily)",
            "fontSize": 14,
            "letterSpacing": "var(--pf-chart-global--letter-spacing)",
            "padding": 10,
            "stroke": "transparent",
          },
          "ticks": Object {
            "fill": "transparent",
            "size": 5,
            "stroke": "none",
            "strokeLinecap": "round",
            "strokeLinejoin": "round",
            "strokeWidth": 1,
          },
        },
        "width": 450,
      },
      "bar": Object {
        "barWidth": 10,
        "colorScale": Array [
          "#06c",
          "#8bc1f7",
          "#002f5d",
          "#519de9",
          "#004b95",
        ],
        "height": 300,
        "padding": 50,
        "style": Object {
          "data": Object {
            "fill": "#06c",
            "padding": 8,
            "stroke": "none",
            "strokeWidth": 0,
          },
          "labels": Object {
            "fontFamily": "var(--pf-chart-global--FontFamily)",
            "fontSize": 14,
            "letterSpacing": "var(--pf-chart-global--letter-spacing)",
            "padding": 10,
            "stroke": "transparent",
          },
        },
        "width": 450,
      },
      "boxplot": Object {
        "boxWidth": 20,
        "colorScale": Array [
          "#06c",
          "#8bc1f7",
          "#002f5d",
          "#519de9",
          "#004b95",
        ],
        "height": 300,
        "padding": 50,
        "style": Object {
          "max": Object {
            "padding": 8,
            "stroke": "#151515",
            "strokeWidth": 1,
          },
          "maxLabels": Object {
            "fontFamily": "var(--pf-chart-global--FontFamily)",
            "fontSize": 14,
            "letterSpacing": "var(--pf-chart-global--letter-spacing)",
            "padding": 10,
            "stroke": "transparent",
          },
          "median": Object {
            "padding": 8,
            "stroke": "#151515",
            "strokeWidth": 1,
          },
          "medianLabels": Object {
            "fontFamily": "var(--pf-chart-global--FontFamily)",
            "fontSize": 14,
            "letterSpacing": "var(--pf-chart-global--letter-spacing)",
            "padding": 10,
            "stroke": "transparent",
          },
          "min": Object {
            "padding": 8,
            "stroke": "#151515",
            "strokeWidth": 1,
          },
          "minLabels": Object {
            "fontFamily": "var(--pf-chart-global--FontFamily)",
            "fontSize": 14,
            "letterSpacing": "var(--pf-chart-global--letter-spacing)",
            "padding": 10,
            "stroke": "transparent",
          },
          "q1": Object {
            "fill": "#8b8d8f",
            "padding": 8,
          },
          "q1Labels": Object {
            "fontFamily": "var(--pf-chart-global--FontFamily)",
            "fontSize": 14,
            "letterSpacing": "var(--pf-chart-global--letter-spacing)",
            "padding": 10,
            "stroke": "transparent",
          },
          "q3": Object {
            "fill": "#8b8d8f",
            "padding": 8,
          },
          "q3Labels": Object {
            "fontFamily": "var(--pf-chart-global--FontFamily)",
            "fontSize": 14,
            "letterSpacing": "var(--pf-chart-global--letter-spacing)",
            "padding": 10,
            "stroke": "transparent",
          },
        },
        "width": 450,
      },
      "candlestick": Object {
        "candleColors": Object {
          "negative": "#151515",
          "positive": "#fff",
        },
        "colorScale": Array [
          "#06c",
          "#8bc1f7",
          "#002f5d",
          "#519de9",
          "#004b95",
        ],
        "height": 300,
        "padding": 50,
        "style": Object {
          "data": Object {
            "stroke": "#151515",
            "strokeWidth": 1,
          },
          "labels": Object {
            "fontFamily": "var(--pf-chart-global--FontFamily)",
            "fontSize": 14,
            "letterSpacing": "var(--pf-chart-global--letter-spacing)",
            "padding": 10,
            "stroke": "transparent",
            "textAnchor": "middle",
          },
        },
        "width": 450,
      },
      "chart": Object {
        "colorScale": Array [
          "#06c",
          "#8bc1f7",
          "#002f5d",
          "#519de9",
          "#004b95",
        ],
        "height": 300,
        "padding": 50,
        "width": 450,
      },
      "errorbar": Object {
        "borderWidth": 8,
        "colorScale": Array [
          "#06c",
          "#8bc1f7",
          "#002f5d",
          "#519de9",
          "#004b95",
        ],
        "height": 300,
        "padding": 50,
        "style": Object {
          "data": Object {
            "fill": "transparent",
            "opacity": 1,
            "stroke": "#151515",
            "strokeWidth": 2,
          },
          "labels": Object {
            "fontFamily": "var(--pf-chart-global--FontFamily)",
            "fontSize": 14,
            "letterSpacing": "var(--pf-chart-global--letter-spacing)",
            "padding": 10,
            "stroke": "transparent",
            "textAnchor": "middle",
          },
        },
        "width": 450,
      },
      "group": Object {
        "colorScale": Array [
          "#06c",
          "#8bc1f7",
          "#002f5d",
          "#519de9",
          "#004b95",
        ],
        "height": 300,
        "padding": 50,
        "width": 450,
      },
      "legend": Object {
        "colorScale": Array [
          "#06c",
          "#8bc1f7",
          "#002f5d",
          "#519de9",
          "#004b95",
        ],
        "gutter": 20,
        "orientation": "horizontal",
        "style": Object {
          "data": Object {
            "type": "square",
          },
          "labels": Object {
            "fontFamily": "var(--pf-chart-global--FontFamily)",
            "fontSize": 14,
            "letterSpacing": "var(--pf-chart-global--letter-spacing)",
            "padding": 10,
            "stroke": "transparent",
          },
          "title": Object {
            "fontFamily": "var(--pf-chart-global--FontFamily)",
            "fontSize": 14,
            "letterSpacing": "var(--pf-chart-global--letter-spacing)",
            "padding": 2,
            "stroke": "transparent",
          },
        },
        "titleOrientation": "top",
      },
      "line": Object {
        "colorScale": Array [
          "#06c",
          "#8bc1f7",
          "#002f5d",
          "#519de9",
          "#004b95",
        ],
        "height": 300,
        "padding": 50,
        "style": Object {
          "data": Object {
            "fill": "transparent",
            "opacity": 1,
            "stroke": "#151515",
            "strokeWidth": 2,
          },
          "labels": Object {
            "fontFamily": "var(--pf-chart-global--FontFamily)",
            "fontSize": 14,
            "letterSpacing": "var(--pf-chart-global--letter-spacing)",
            "padding": 10,
            "stroke": "transparent",
            "textAnchor": "middle",
          },
        },
        "width": 450,
      },
      "pie": Object {
        "colorScale": Array [
          "#06c",
          "#8bc1f7",
          "#002f5d",
          "#519de9",
          "#004b95",
        ],
        "height": 230,
        "padding": 8,
        "style": Object {
          "data": Object {
            "padding": 8,
            "stroke": "transparent",
            "strokeWidth": 1,
          },
          "labels": Object {
            "fontFamily": "var(--pf-chart-global--FontFamily)",
            "fontSize": 14,
            "letterSpacing": "var(--pf-chart-global--letter-spacing)",
            "padding": 8,
            "stroke": "transparent",
          },
        },
        "width": 230,
      },
      "scatter": Object {
        "colorScale": Array [
          "#06c",
          "#8bc1f7",
          "#002f5d",
          "#519de9",
          "#004b95",
        ],
        "height": 300,
        "padding": 50,
        "style": Object {
          "data": Object {
            "fill": "#151515",
            "opacity": 1,
            "stroke": "transparent",
            "strokeWidth": 0,
          },
          "labels": Object {
            "fontFamily": "var(--pf-chart-global--FontFamily)",
            "fontSize": 14,
            "letterSpacing": "var(--pf-chart-global--letter-spacing)",
            "padding": 10,
            "stroke": "transparent",
            "textAnchor": "middle",
          },
        },
        "width": 450,
      },
      "stack": Object {
        "colorScale": Array [
          "#06c",
          "#8bc1f7",
          "#002f5d",
          "#519de9",
          "#004b95",
        ],
        "height": 300,
        "padding": 50,
        "style": Object {
          "data": Object {
            "strokeWidth": 1,
          },
        },
        "width": 450,
      },
      "tooltip": Object {
        "cornerRadius": 0,
        "flyoutStyle": Object {
          "cornerRadius": 0,
          "fill": "#151515",
          "pointerEvents": "none",
          "stroke": "#151515",
          "strokeWidth": 0,
        },
        "pointerLength": 10,
        "pointerWidth": 20,
        "style": Object {
          "fill": "#ededed",
          "padding": 16,
          "pointerEvents": "none",
        },
      },
      "voronoi": Object {
        "colorScale": Array [
          "#06c",
          "#8bc1f7",
          "#002f5d",
          "#519de9",
          "#004b95",
        ],
        "height": 300,
        "padding": 50,
        "style": Object {
          "data": Object {
            "fill": "transparent",
            "stroke": "transparent",
            "strokeWidth": 0,
          },
          "flyout": Object {
            "fill": "#151515",
            "pointerEvents": "none",
            "stroke": "#151515",
            "strokeWidth": 1,
          },
          "labels": Object {
            "fill": "#ededed",
            "fontFamily": "var(--pf-chart-global--FontFamily)",
            "fontSize": 14,
            "letterSpacing": "var(--pf-chart-global--letter-spacing)",
            "padding": 8,
            "pointerEvents": "none",
            "stroke": "transparent",
            "textAnchor": "middle",
          },
        },
        "width": 450,
      },
    }
  }
  width={200}
>
  <Component
    data={
      Array [
        Object {
          "name": "Cats",
          "x": 1,
          "y": 1,
        },
        Object {
          "name": "Cats",
          "x": 2,
          "y": 2,
        },
        Object {
          "name": "Cats",
          "x": 3,
          "y": 3.2,
        },
        Object {
          "name": "Cats",
          "x": 4,
          "y": 3.5,
        },
      ]
    }
  />
  <Component
    data={
      Array [
        Object {
          "name": "Dogs",
          "x": 1,
          "y": 0.5,
        },
        Object {
          "name": "Dogs",
          "x": 2,
          "y": 1,
        },
        Object {
          "name": "Dogs",
          "x": 3,
          "y": 2,
        },
        Object {
          "name": "Dogs",
          "x": 4,
          "y": 2.5,
        },
        Object {
          "name": "Dogs",
          "x": 5,
          "y": 2.5,
        },
      ]
    }
  />
</VictoryGroup>
`;
